--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jade": "~1.3.0",
 	"sequelize": "~3.23.0",
 	"mysql": "~2.10.2",
-	"azure-storage": "~0.10.0"
+	"azure-storage": "~0.10.0",
+	"sendgrid":"~1.9.2",
+	"twilio":"~2.9.1"
   }
 }
